Closed Bug 420370 Opened 16 years ago Closed 16 years ago

gethash object not set up at startup

Categories

(Toolkit :: Safe Browsing, defect, P1)

defect

Tracking

()

RESOLVED FIXED
Firefox 3

People

(Reporter: dcamp, Assigned: dcamp)

Details

Attachments

(1 file)

Attached patch fixSplinter Review
listmanager.js doesn't set up the nsUrlClassifierHashCompleter object until its deferred startup, and while the hash completer isn't set up, gethash requests will fail.

Attached patch turns nsUrlClassifierHashCompleter into a service, uses it by default when no hash completer has been set up, and defers gethash requests until listmanager.js sets up the hash completer.
Flags: blocking-firefox3?
Attachment #306597 - Flags: review?(tony)
Attachment #306597 - Flags: review?(tony) → review+
Flags: blocking-firefox3? → blocking-firefox3+
Priority: -- → P1
Target Milestone: --- → Firefox 3
Assignee: nobody → dcamp
Checking in content/listmanager.js;
/cvsroot/mozilla/toolkit/components/url-classifier/content/listmanager.js,v  <--  listmanager.js
new revision: 1.27; previous revision: 1.26
done
Checking in src/nsUrlClassifierDBService.cpp;
/cvsroot/mozilla/toolkit/components/url-classifier/src/nsUrlClassifierDBService.cpp,v  <--  nsUrlClassifierDBService.cpp
new revision: 1.68; previous revision: 1.67
done
Checking in src/nsUrlClassifierDBService.h;
/cvsroot/mozilla/toolkit/components/url-classifier/src/nsUrlClassifierDBService.h,v  <--  nsUrlClassifierDBService.h
new revision: 1.13; previous revision: 1.12
done
Checking in src/nsUrlClassifierHashCompleter.cpp;
/cvsroot/mozilla/toolkit/components/url-classifier/src/nsUrlClassifierHashCompleter.cpp,v  <--  nsUrlClassifierHashCompleter.cpp
new revision: 1.5; previous revision: 1.4
done
Checking in tests/unit/test_partial.js;
/cvsroot/mozilla/toolkit/components/url-classifier/tests/unit/test_partial.js,v  <--  test_partial.js
new revision: 1.6; previous revision: 1.5
done
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Product: Firefox → Toolkit
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: