Bug 420370: nsUrlClassifierHashCompleter not configured immediately at startup.  r=tony, blocking-firefox3=beltzner